[project]
name = "monkeytype"
requires-python = ">=3.13"

[tool.poetry]
version = "2.1.1"

[tool.black]
line_length = 79
skip_magic_trailing_comma = true
preview = true
enable_unstable_feature = ["hug_parens_with_braces_and_square_brackets", "wrap_long_dict_values_in_parens"]
target_version = ["py313"]

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
multi_line_output = true
src_paths = ["park", "scripts"]
remove_redundant_aliases = true
force_single_line = true
line_length = 80

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = false
order-by-type = false
force-sort-within-sections = false


[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
# necessary to work with flake8 6.0.0
pytest = "*"
ruff = "*"
mypy = "*"
sphinx = "<7.2"
twine = "*"
tomli = "*"
tox = "*"
setuptools_rust = "*"
libcst = "*"
importlib_metadata = "*"

[tool.poetry.group.tools.dependencies]
ipython = "*"
jsbeautifier = "*"
pyright = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
